:bug: Fix layout issues

--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -1,5 +1,6 @@
 .main {
   flex: 1 0 auto;
+  padding: 1em 0;
 }
 
 .footer {
