--- a/pages/blog.module.scss
+++ b/pages/blog.module.scss
@@ -5,10 +5,5 @@
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 1.5em;
   grid-auto-rows: 33%;
-  height: 100%;
   margin-top: 2em;
-}
-
-.page {
-  padding: 1em 0;
 }
